--- a/app/blog/posts/cultivating-creativity.mdx
+++ b/app/blog/posts/cultivating-creativity.mdx
@@ -1,3 +1,10 @@
+---
+title: 'Cultivating Creativity: Balancing Technical Skills and Artistic Pursuits'
+publishedAt: '2025-06-03'
+summary: 'Discover how combining coding and creativity leads to more thoughtful, engaging digital projects, where logic meets design and artistic thinking shapes the way we build.'
+---
+
+
 # 🌿 Cultivating Creativity: Balancing Technical Skills and Artistic Pursuits
 
 As a creative technologist and computer science student at RH Köln, I often switch between fixing code and taking photos with my camera. At first, these activities may seem very different—one is logical, the other artistic. But over time, I’ve seen how closely connected they really are.
