changed blog post structure

--- a/app/blog/posts/risk.mdx
+++ b/app/blog/posts/risk.mdx
@@ -1,12 +1,8 @@
 ---
 title: 'Risk Isn’t What You Think It Is'
 publishedAt: '2025-06-07'
-summary: 'Feeling unsure doesn’t mean it’s wrong'
+summary: 'Feeling unsure doesn’t mean it’s wrong.'
 ---
-
-# Risk Isn’t What You Think It Is
-
-*July 2024*
 
 Most people treat risk like it’s some monster lurking under the bed. Better left alone. But the truth? Your brain is bullshitting you.
 
