--- a/app/blog/posts/cultivating-creativity.mdx
+++ b/app/blog/posts/cultivating-creativity.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Cultivating Creativity: Balancing Technical Skills and Artistic Pursuits'
+title: 'Balancing Technical Skills and Artistic Pursuits'
 publishedAt: '2025-06-03'
 summary: 'Discover how combining coding and creativity leads to more thoughtful, engaging digital projects, where logic meets design and artistic thinking shapes the way we build.'
 ---
