--- a/app/blog/posts/digital-gardens.mdx
+++ b/app/blog/posts/digital-gardens.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Cultivating Your Digital Garden: A New Approach to Online Content'
+title: 'A New Approach to Online Content'
 publishedAt: '2025-05-20'
 summary: 'Explore the concept of digital gardens, a dynamic and evolving way to share knowledge and ideas online, moving beyond traditional chronological blogs.'
 ---
